fixed code in redirect

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <script>
-window.href = "http://spacebrew.cc/examples/"
+window.location = "http://spacebrew.cc/examples/";
 </script>
 </head>
 <body>
