--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <script>
-window.location = "http://spacebrew.cc/examples/";
+window.location = "http://docs.spacebrew.cc/examples/";
 </script>
 </head>
 <body>
