--- a/spacebrew_speech/index.html
+++ b/spacebrew_speech/index.html
@@ -5,9 +5,9 @@
 <body>
 	<ul>
 		<li><a href="app.html?server=lab-server&name=speech-sender">App on Lab SpaceBrew Server</a></li>
-		<li><a href="app.html?server=server=ec2-184-72-140-184.compute-1.amazonaws.com&name=speech-sender">App on EC2 SpaceBrew Server</a></li>
-		<li><a href="http://spacebrew.cc/master/spacebrew/admin/admin.html?server=lab-server">Lab Admin</a></li>
-		<li><a href="http://spacebrew.cc/master/spacebrew/admin/admin.html?server=ec2-184-72-140-184.compute-1.amazonaws.com">Cloud Admin</a></li>
+		<li><a href="app.html?server=sandbox.spacebrew.cc&name=speech-sender">App on EC2 SpaceBrew Server</a></li>
+		<li><a href="http://labatrockwell.github.com/spacebrew/admin/admin.html?server=lab-server">Lab Admin</a></li>
+		<li><a href="http://labatrockwell.github.com/spacebrew/admin/admin.html?server=sandbox.spacebrew.cc">Cloud Admin</a></li>
 	</ul>
 </body>
 </html>
