created an index.html page with links to each project.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,39 @@
 <html>
-<head>
-<script>
-window.location = "http://docs.spacebrew.cc/examples/";
-</script>
-</head>
-<body>
-</body>
+	<head>
+	</head>
+	<body>
+		<div>
+			Please remember to give your client a unique name. You can click one of the following links and add your unique name after the "name=" in the query string and press enter to re-load the page with your unique name.
+		</div>
+		Graph:
+		<a href='spacebrew_graph/index.html?name='>local</a>
+		<a href='spacebrew_graph/index.html?server=lab-server&name='>lab</a>
+		<a href='spacebrew_graph/index.html?server=sandbox.spacebrew.cc&name='>cloud</a>
+		<br />
+		Phone Motion Events:
+		<a href='spacebrew_phones/index.html?name='>local</a>
+		<a href='spacebrew_phones/index.html?server=lab-server&name='>lab</a>
+		<a href='spacebrew_phones/index.html?server=sandbox.spacebrew.cc&name='>cloud</a>
+		<br />
+		Picture Slideshow:
+		<a href='spacebrew_slideshow/index.html?name='>local</a>
+		<a href='spacebrew_slideshow/index.html?server=lab-server&name='>lab</a>
+		<a href='spacebrew_slideshow/index.html?server=sandbox.spacebrew.cc&name='>cloud</a>
+		<br />
+		Speech to Text:
+		<a href='spacebrew_speech/index.html?name='>local</a>
+		<a href='spacebrew_speech/index.html?server=lab-server&name='>lab</a>
+		<a href='spacebrew_speech/index.html?server=sandbox.spacebrew.cc&name='>cloud</a>
+		<br />
+		Text Transform:
+		<a href='spacebrew_text_transform/index.html?name='>local</a>
+		<a href='spacebrew_text_transform/index.html?server=lab-server&name='>lab</a>
+		<a href='spacebrew_text_transform/index.html?server=sandbox.spacebrew.cc&name='>cloud</a>
+		<br />
+		Url Launcher:
+		<a href='spacebrew_url_launcher/index.html?name='>local</a>
+		<a href='spacebrew_url_launcher/index.html?server=lab-server&name='>lab</a>
+		<a href='spacebrew_url_launcher/index.html?server=sandbox.spacebrew.cc&name='>cloud</a>
+		<br />
+	</body>
 </html>
