--- a/spacebrew_graph/index.html
+++ b/spacebrew_graph/index.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="css/style.css" type="text/css" media="screen" charset="utf-8" />
     <script type="text/javascript" src="js/jq.js"></script>
     <script type="text/javascript" src="js/smoothie.js"></script>
-    <script type="text/javascript" src="js/sb.js"></script>
+    <script type="text/javascript" src="js/sb-1.0.3.js.js"></script>
 
     <script type="text/javascript">
 
