updated index.html page of gh-pages.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
 		<a href='spacebrew_phones/index.html?server=lab-server&name='>lab</a>
 		<a href='spacebrew_phones/index.html?server=sandbox.spacebrew.cc&name='>cloud</a>
 		<br />
+		Phone Orientation Events:
+		<a href='spacebrew_phone_orientation/index.html?name='>local</a>
+		<a href='spacebrew_phone_orientation/index.html?server=lab-server&name='>lab</a>
+		<a href='spacebrew_phone_orientation/index.html?server=sandbox.spacebrew.cc&name='>cloud</a>
+		<br />
 		Picture Slideshow:
 		<a href='spacebrew_slideshow/index.html?name='>local</a>
 		<a href='spacebrew_slideshow/index.html?server=lab-server&name='>lab</a>
