--- a/spacebrew_graph/index.html
+++ b/spacebrew_graph/index.html
@@ -6,143 +6,96 @@
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="css/reset.css" type="text/css" media="screen" charset="utf-8" />
 		<link rel="stylesheet" href="css/style.css" type="text/css" media="screen" charset="utf-8" />
-    <script type="text/javascript" src="js/jq.js"></script>
-    <script type="text/javascript" src="js/smoothie.js"></script>
-    <script type="text/javascript" src="js/sb-1.0.3.js"></script>
+		<script type="text/javascript" src="js/jq.js"></script>
+		<script type="text/javascript" src="js/smoothie.js"></script>
+		<script type="text/javascript" src="js/sb-1.2.0.js"></script>
 
-    <script type="text/javascript">
+		<script type="text/javascript">
 
-      // when page loads call the setup function to connect to spacebrew
-      $(window).on("load",  setup );
+		  // when page loads call the setup function to connect to spacebrew
+		  $(window).on("load",  setup );
 
-      // variable that holds the spacebrew client object
-      var sb;
+		  // variable that holds the spacebrew client object
+		var sb
+			, app_name = "space graph"
+		  	;
 
-      // variabls that hold the boolean and string values received via spacebrew
-      var boolVal1, boolVal2, boolVal3;
-      var currentMessage1, currentMessage2, currentMessage3;
+		  /**
+		   * setup Function that creates and configures the connection to the Spacebrew server.
+		   *          It is called when the page loads.
+		   */
+		  function setup (){
+			var random_id = "0000" + Math.floor(Math.random() * 10000)
+				;
 
-      /**
-       * setup Function that creates and configures the connection to the Spacebrew server.
-       *          It is called when the page loads.
-       */
-      function setup (){
-        // setup spacebrew!
-        sb = new Spacebrew.Client();
-        sb.description("This is a client which can be used to visualize various outputs from any other publishers.");
+			app_name = app_name + ' ' + random_id.substring(random_id.length-4);
 
-        // Override Spacebrew events - this is how you catch events coming from Spacebrew
-        sb.onRangeMessage = onRangeMessage;
-        sb.onStringMessage = onStringMessage;
-        sb.onBooleanMessage = onBooleanMessage;
+		    // setup spacebrew!
+		    sb = new Spacebrew.Client();
+			sb.name(app_name);
+		    sb.description("This is a client which can be used to visualize various outputs from any other publishers.");
 
-        // create the spacebrew subscription channels
-        sb.addSubscribe("line1","range");
-        sb.addSubscribe("line2","range");
-        sb.addSubscribe("line3","range");
-        sb.addSubscribe("bool1","boolean");
-        sb.addSubscribe("bool2","boolean");
-        sb.addSubscribe("bool3","boolean");
-        sb.addSubscribe("string1","string");
-        sb.addSubscribe("string2","string");
-        sb.addSubscribe("string3","string");
+		    // Override Spacebrew events - this is how you catch events coming from Spacebrew
+			sb.onOpen = onOpen;
+		    sb.onRangeMessage = onRangeMessage;
 
-        // connect to spacebrew
-        sb.connect();
-      }
-            
-      /**
-       * onRangeMessage Function that is called whenever new spacebrew range messages are received.
-       *          It accepts two parameters:
-       * @param  {String} name    Holds name of the subscription feed channel
-       * @param  {Integer} value  Holds value received from the subscription feed
-       */
-      function onRangeMessage( name, value ){
-        // handle the messages from each subscription channel
-        if (name == "line1") {
-          console.log("received line1 message");
-          line1.append(new Date().getTime(), value);  // append new data point to line
-        }
+		    // create the spacebrew subscription channels
+		    sb.addSubscribe("line1","range");
+		    sb.addSubscribe("line2","range");
+		    sb.addSubscribe("line3","range");
 
-        if (name == "line2") {
-          console.log("received line2 message");
-          line2.append(new Date().getTime(), value);  // append new data point to line
-        }
+		    // connect to spacebrew
+		    sb.connect();
+		  }
 
-        if (name == "line3") {
-          console.log("received line3 message");
-          line3.append(new Date().getTime(), value);  // append new data point to line
-        }
-      }
+			/**
+			 * Function that is called when Spacebrew connection is established
+			 */
+			function onOpen() {
+				var message = "Connected as <strong>" + sb.name() + "</strong>. ";
+				if (sb.name() === app_name) {
+					message += "<br>You can customize this app's name in the query string by adding <strong>name=your_app_name</strong>."
+				}
+				$("#name").html( message );
+			}
+		        
+		  /**
+		   * onRangeMessage Function that is called whenever new spacebrew range messages are received.
+		   *          It accepts two parameters:
+		   * @param  {String} name    Holds name of the subscription feed channel
+		   * @param  {Integer} value  Holds value received from the subscription feed
+		   */
+		  function onRangeMessage( name, value ){
+		    // handle the messages from each subscription channel
+		    if (name == "line1") {
+		      console.log("received line1 message");
+		      line1.append(new Date().getTime(), value);  // append new data point to line
+		    }
 
-      /**
-       * onStringMessage Function that is called whenever new spacebrew string messages are received.
-       *          It accepts two parameters:
-       * @param  {String} name    Holds name of the subscription feed channel
-       * @param  {String} value   Holds text message received from the subscription feed
-       */
-      function onStringMessage( name, value ){
-        // handle the messages from each subscription channel
-        if (name == "string1") {
-          console.log("received string1 message");
-          currentMessage1 = value;  // set message 1 value
-        }
+		    if (name == "line2") {
+		      console.log("received line2 message");
+		      line2.append(new Date().getTime(), value);  // append new data point to line
+		    }
 
-        if (name == "string2") {
-          console.log("received string2 message");
-          currentMessage2 = value;  // set message 2 value
-        }
+		    if (name == "line3") {
+		      console.log("received line3 message");
+		      line3.append(new Date().getTime(), value);  // append new data point to line
+		    }
+		  }
 
-        if (name == "string3") {
-          console.log("received string3 message");
-          currentMessage3 = value;  // set message 3 value
-        }
-
-        // load the new values to the browser
-        $("#currentMessage").html("1: " + currentMessage1 + " <br/>2: " + currentMessage2 + " <br/>3: " + currentMessage3);
-
-      }
-
-      /**
-       * onBooleanMessage Function that is called whenever new spacebrew boolean messages are received.
-       *          It accepts two parameters:
-       * @param  {String} name    Holds name of the subscription feed channel
-       * @param  {Integer} value  Holds boolean received from the subscription feed
-       */
-      function onBooleanMessage( name, value ){
-        // handle the messages from each subscription channel
-        if (name == "bool1") {
-            console.log("received bool1 message");
-            boolVal1 = value;   // set boolean value 1
-        }
-
-         if (name == "bool2") {
-            console.log("received bool2 message");
-            boolVal2 = value;   // set boolean value 2
-        }
-
-         if (name == "bool1") {
-            console.log("received bool1 message");
-            boolVal3 = value;   // set boolean value 3
-        }
-
-        // load the new values to the browser
-        $("#bools").html("1: " + boolVal1 + " 2: " + boolVal2 + " 3: " + boolVal3);
-      }
-
-    </script>
+		</script>
 		<!-- MAIN -->
 	</head>
 
 	<body>
     <h4>Incoming Range Data:</h4>
-		<canvas id="mycanvas" width="700" height="350"></canvas>
+	<canvas id="mycanvas" width="700" height="350"></canvas>
+	<br>
+	<br>
+	<div id="name">Trying to connect</div>
+	<br>
 
-    <h4>Incoming Booleans:</h4>
-    <div id="bools"> 1: undefined 2: undefined 3: undefined</div>
 
-    <h4>Incoming Strings:</h4>
-    <div id="currentMessage"> 1: <br/>2: <br/>3: </div>
   </body>
 </html>
 
@@ -155,8 +108,8 @@
   var line3 = new TimeSeries();
 
   // create the chart wher the time series will be graphed
-  var smoothie = new SmoothieChart({  grid: { strokeStyle: 'rgb(211, 25, 150)', 
-                                              fillStyle: 'rgb(112, 141, 145)', 
+  var smoothie = new SmoothieChart({  grid: { strokeStyle: 'rgb(255, 125, 125)', 
+                                              fillStyle: 'rgb(220, 220, 220)', 
                                               lineWidth: 1, 
                                               millisPerLine: 250, 
                                               verticalSections: 6 
@@ -164,9 +117,9 @@
                                       });
 
   // add the time series to the graph
-  smoothie.addTimeSeries(line1, { strokeStyle: 'rgb(211, 25, 150)', fillStyle: 'rgba(211, 25, 150, 0.4)', lineWidth: 3 });
-  smoothie.addTimeSeries(line2, { strokeStyle: 'rgb(25, 221, 137)', fillStyle: 'rgba(25, 221, 137, 0.3)', lineWidth: 3 });
-  smoothie.addTimeSeries(line3, { strokeStyle: 'rgb(8, 164, 153)', fillStyle: 'rgba(8, 164, 153, 0.3)', lineWidth: 3 });
+  smoothie.addTimeSeries(line1, { strokeStyle: 'rgb(221, 25, 150)', fillStyle: 'rgba(211, 25, 150, 0.4)', lineWidth: 3 });
+  smoothie.addTimeSeries(line2, { strokeStyle: 'rgb(25, 221, 150)', fillStyle: 'rgba(25, 221, 137, 0.3)', lineWidth: 3 });
+  smoothie.addTimeSeries(line3, { strokeStyle: 'rgb(25, 150, 221)', fillStyle: 'rgba(25, 150, 221, 0.3)', lineWidth: 3 });
 
   // add the graph to the canvas
   smoothie.streamTo(document.getElementById("mycanvas"), 1000);
